first version display the result sets
- Refactoring DataFrame
- Adding `TableSettings`.
- statistics now stored along the field metadata in the schema.
- full rewrite of the TableView component.
- QueryHistory now displaying the datasets.
- Introduction of the `Format` interface in typescript.
